# c-scripts-rofi

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODOs.org
include/: argp.h  db+rofi.h  db.h  errmsg.h  file_find.h  macrofun.h  main.h  rofi.h  strs.h
src/: argp.c  db+rofi.c  db.c  errmsg.c  exec.c  file_find.c  main.c  main_aux.c  main_cleanup.c  main_dump_all.c  main_exec.c  main_gv.c  main_select_script.c  rofi.c  rofi_ask_yn.c  rofi_select_list.c  rofi_show_error.c  strs.c
